<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/RecordButton"
        android:layout_width="185dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:text="@string/record_this_food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="412dp"
        android:layout_height="175dp"
        android:layout_marginTop="144dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="184dp"
            android:layout_height="41dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/enter_food_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/ignore_text_view_2"
            android:layout_width="97dp"
            android:layout_height="40dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="none"
            android:gravity="center"
            android:text="@string/caloriestext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ignore_textview_1"
            app:layout_constraintVertical_bias="0.066" />
        <TextView
            android:id="@+id/ignore_textview_1"
            android:layout_width="97dp"
            android:layout_height="36dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:ems="10"
            android:text="@string/food"
            app:layout_constraintBottom_toBottomOf="@+id/textInputEditText"
            app:layout_constraintEnd_toStartOf="@+id/textInputEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.615" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText2"
            android:layout_width="184dp"
            android:layout_height="38dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="28dp"
            android:hint="@string/enter_calories"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ignore_text_view_2"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
